// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConnectionManager should close the connection if api version is less than minimum version 1`] = `
Array [
  "Opening connection on /dev/something",
  "Serial port <span class=\\"message-positive\\">successfully</span> opened, connectionId=23432423",
  "MultiWii API version: <strong>1.0.1</strong>",
  "MSP version not supported: <span class=\\"message-negative\\">1.0.1</span>",
  "Serial port <span class=\\"message-positive\\">successfully</span> closed for connectionId=23432423",
]
`;

exports[`ConnectionManager should close the connection when the disconnect button is clicked 1`] = `
Array [
  "Serial port <span class=\\"message-positive\\">successfully</span> closed for connectionId=435345",
]
`;

exports[`ConnectionManager should connect with the connection settings and set the new connection id when connect clicked 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 70px;
  width: 70px;
  color: #fff;
  font-size: 12px;
  font-weight: normal;
  text-shadow: 0px 1px rgba(0,0,0,0.25);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #ffbb00;
  border: 1px solid #dba718;
  height: 50px;
  width: 50px;
  border-radius: 100px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  cursor: pointer;
}

.c1 svg {
  width: 44px;
  height: 44px;
}

.c1:hover {
  background-color: #ffcc3f;
}

<div
    class="c0"
  >
    <button
      class="c1"
      data-testid="connect-button"
      type="button"
    >
      <svg
        data-name="usb-connect"
      />
    </button>
    <div>
      Connect
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConnectionManager should connect with the connection settings and set the new connection id when connect clicked 2`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 70px;
  width: 70px;
  color: #fff;
  font-size: 12px;
  font-weight: normal;
  text-shadow: 0px 1px rgba(0,0,0,0.25);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #ffbb00;
  border: 1px solid #dba718;
  height: 50px;
  width: 50px;
  border-radius: 100px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  cursor: pointer;
}

.c1 svg {
  width: 44px;
  height: 44px;
}

.c1:hover {
  background-color: #ffcc3f;
}

<div
    class="c0"
  >
    <button
      class="c1"
      data-testid="disconnect-button"
      type="button"
    >
      <svg
        data-name="usb-disconnect"
      />
    </button>
    <div>
      Connecting
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConnectionManager should connect with the connection settings and set the new connection id when connect clicked 3`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 70px;
  width: 70px;
  color: #fff;
  font-size: 12px;
  font-weight: normal;
  text-shadow: 0px 1px rgba(0,0,0,0.25);
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  background-color: #ffbb00;
  border: 1px solid #dba718;
  height: 50px;
  width: 50px;
  border-radius: 100px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  padding-left: 0px;
  cursor: pointer;
  background-color: #e60000;
  border: 1px solid #fe0000;
}

.c1 svg {
  width: 44px;
  height: 44px;
}

.c1:hover {
  background-color: #ffcc3f;
  background-color: #f21212;
}

<div
    class="c0"
  >
    <button
      class="c1"
      data-testid="disconnect-button"
      type="button"
    >
      <svg
        data-name="usb-disconnect"
      />
    </button>
    <div>
      Disconnect
    </div>
  </div>
</DocumentFragment>
`;

exports[`ConnectionManager should connect with the connection settings and set the new connection id when connect clicked 4`] = `
Array [
  "Opening connection on /dev/something",
  "Serial port <span class=\\"message-positive\\">successfully</span> opened, connectionId=23455",
  "MultiWii API version: <strong>1.40.1</strong>",
  "<b>Arming disabled</b>",
]
`;

exports[`ConnectionManager should handle aborting connection attempts 1`] = `
Array [
  "Opening connection on /dev/something",
  "Connection attempt to /dev/something aborted",
  "Opening connection on /dev/something",
  "Serial port <span class=\\"message-positive\\">successfully</span> opened, connectionId=243455",
  "MultiWii API version: <strong>1.40.1</strong>",
  "<b>Arming disabled</b>",
]
`;

exports[`ConnectionManager should handle failing to connect 1`] = `
Array [
  "Opening connection on /dev/something",
  "Could not open connection (<span class=\\"message-negative\\">some error</span>), communication <span class=\\"message-negative\\">failed</span>",
]
`;

exports[`ConnectionManager should remove the active connection if onConnectionChanged event subscription fails 1`] = `
Array [
  "Serial port closed unexpectedly for connectionId=238478234",
]
`;

exports[`ConnectionManager should remove the connection when onConnectionChanged event occurs for the active connection with no new connectionId 1`] = `
Array [
  "Serial port closed unexpectedly for connectionId=238478234",
]
`;

exports[`ConnectionManager should update the connectionId when onConnectionChanged event occurs for the active connection with a new connectionId 1`] = `
Array [
  "Serial port reconnected for connectionId=238478234 newConnectionId=new-id ",
]
`;
